--- a/env.example
+++ b/env.example
@@ -2,15 +2,23 @@ APP_NAME=FCM
 # dev,testing,production
 APP_ENV=dev
 
-LOG_PATH=/var/www/anti_addiction/logs
+LOG_PATH=/www/wwwroot/anti_addiction/logs
 
-# 应用标识
 FCM_APPID=
-# 用户密钥
 FCM_APPSECRET=
-# 游戏备案识别码
 FCM_BIZID=
 
+# redis设置
+# tcp/tls
+REDIS_SCHEME=tcp
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_PWD=
+REDIS_DB=2
+
+TEST_FCM_APPID=
+TEST_FCM_APPSECRET=
+TEST_FCM_BIZID=
 # 实名认证上报 测试码
 FCM_IDCARD_CHECK_KEY=
 # 实名认证查询 测试码
